# CHIP-8-emu

./: CMakeLists.txt  Dockerfile  README.md
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/include/: CEmulator.h  CGraphics.h  chip8_consts.h
cpp/scripts/: 01_create_doxygen.sh  02_run_code_quality.sh  03_run_tests.sh
cpp/src/: CEmulator.cpp  CEmulator.h  CGraphics.cpp  main.cpp
src/: main.cpp
